Added core scss files and gitignore.

--- a/style_guide.html
+++ b/style_guide.html
@@ -16,17 +16,17 @@
 
     </header>
 
-    <!-- General about container -->
+    <!-- Style guide philosophy -->
     <section>
 
     </section>
 
-    <!-- Links to developer and design sites container -->
+    <!-- Style guide colors and shapes -->
     <section>
         
     </section>
 
-    <!-- Contact and style guide container -->
+    <!-- Style guide brand and typography -->
     <section>
 
     </section>
