--- a/work.html
+++ b/work.html
@@ -16,17 +16,17 @@
 
     </header>
 
-    <!-- General about container -->
+    <!-- Work projects overview container -->
     <section>
 
     </section>
 
-    <!-- Links to developer and design sites container -->
+    <!-- Project 1 container -->
     <section>
         
     </section>
 
-    <!-- Contact and style guide container -->
+    <!-- project 1 container -->
     <section>
 
     </section>
