Added grid structure on index

--- a/index.html
+++ b/index.html
@@ -15,23 +15,60 @@
 <body>
 
     <!-- Heading & navigation container -->
-    <header>
-        
+    <header class="container-fluid">
+        <div class="row">
+            <div class="col-sm">Logo and brand</div>
+            <div class="col-sm">Navigation menu</div>
+        </div>
     </header>
 
     <!-- General about container -->
-    <section>
-
+    <section class="container-fluid">
+        <div class="row">
+            <div class="col-sm-2">
+                <div class="row">
+                    <div class="col-sm">Section heading</div>
+                </div>
+                <div class="row">
+                    <div class="col-sm">Picture</div>
+                </div>
+            </div>
+            <div class="col-sm">
+                <div class="row">
+                    <div class="col-sm">Bio section</div>
+                </div>
+                <div class="row">
+                    <div class="col-sm">Skills and tools</div>
+                </div>
+                <div class="row">
+                    <div class="col-sm">Coding skills list</div>
+                    <div class="col-sm">Design skills list</div>
+                    <div class="col-sm">People skills list</div>
+                </div>
+            </div>
+            <div class="col-sm">
+                <div class="row">Front end developer resume</div>
+                <div class="row">Graphic design portfolio</div>
+            </div>
+        </div>
     </section>
 
     <!-- Links to developer and design sites container -->
-    <section>
-        
+    <section class="container-fluid">
+        <div class="row">
+            <div class="col-sm">Section heading</div>
+            <div class="col-sm">Information</div>
+            <div class="col-sm">Links to dev sites</div>
+        </div>
     </section>
 
     <!-- Contact and style guide container -->
-    <section>
-
+    <section class="container-fluid">
+        <div class="row">
+            <div class="col-sm">Section heading</div>
+            <div class="col-sm">Contact form</div>
+            <div class="col-sm">Style guide</div>
+        </div>
     </section>
 
     <!-- Optional JavaScript -->
