Developed section heading component.

--- a/sandbox.html
+++ b/sandbox.html
@@ -17,10 +17,39 @@
 
 <body>
 
+    <!-- Font face previews: -->
+    <code>Font face previews:</code>
     <p class="soleil-light">Soleil Light</p>
     <P class="soleil-regular">Soleil Regular</P>
     <p class="soleil-extrabold">Soleil ExtraBold</p>
     <p class="shrikhand">Shrikhand</p>
+
+    <!-- Section heading component -->
+    <code>Section heading component:</code>
+    <div class="container-fluid mt-3">
+        <div class="row section-container no-gutters rounded-sm">
+            <div class="col-sm-2 m-3">
+                <header class="section-heading-container rounded-sm">
+                    <h5 class="soleil-extrabold section-heading-text">BIOGRAPHY <br> SKILLS <br> RESUME & PORTFOLIO</h5>
+                </header>
+            </div>
+            <div class="col-sm m-3">
+                Section content area.
+            </div>
+        </div>
+    </div>
+    
+    <!-- Navigation Component -->
+    <div class="container-fluid mt-3">
+        <div class="row section-container no-gutters rounded-sm">
+            <div class="col-sm m-3">
+                <nav>
+                    <a href="#">ABOUT</a>
+                    <a href="#">WORK</a>
+                </nav>
+            </div>
+        </div>
+    </div>
     
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
