Created nav component

--- a/sandbox.html
+++ b/sandbox.html
@@ -44,13 +44,13 @@
         <div class="row section-container no-gutters rounded-sm">
             <div class="col-sm m-3">
                 <nav>
-                    <a href="#">ABOUT</a>
-                    <a href="#">WORK</a>
+                    <span class="navlink-custom soleil-extrabold"><a href="#">ABOUT</a></span>
+                    <span class="navlink-custom soleil-extrabold"><a class="navlink-custom-padder" href="#">WORK</a></span>
                 </nav>
             </div>
         </div>
     </div>
-    
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
