Continued layout of homepage

--- a/index.html
+++ b/index.html
@@ -15,27 +15,47 @@
 <body>
 
     <!-- Heading & navigation container -->
-    <header class="container-fluid">
-        <div class="row">
-            <div class="col-sm">Logo and brand</div>
-            <div class="col-sm">Navigation menu</div>
+    <header class="container-fluid pt-3">
+        <div class="row section-container no-gutters rounded-sm">
+            <div class="col-sm-4">
+                <img class="m-3" src="./img/nickfazz_header_brand.svg" alt="Nicholas Fazzolari brand logo">
+            </div>
+            <div class="col-sm d-flex justify-content-center align-items-center">
+                <div class="row section-container no-gutters rounded-sm">
+                    <div class="col-sm m-3">
+                        <nav>
+                            <span class="navlink-custom soleil-extrabold"><a class="navlink-custom-padder" href="#">ABOUT</a></span>
+                            <span class="navlink-custom soleil-extrabold"><a class="navlink-custom-padder" href="#">WORK</a></span>
+                        </nav>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
 
     <!-- General about container -->
-    <section class="container-fluid">
-        <div class="row">
-            <div class="col-sm-2">
+    <section class="container-fluid pt-3">
+        <div class="row section-container no-gutters rounded-sm">
+            <div class="col-sm-2 p-3">
                 <div class="row">
-                    <div class="col-sm">Section heading</div>
+                    <div class="col-sm">
+                        <header class="section-heading-container rounded-sm">
+                            <h5 class="soleil-extrabold section-heading-text">BIOGRAPHY <br> SKILLS <br> RESUME & PORTFOLIO</h5>
+                        </header>
+                    </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm">Picture</div>
+                    <div class="col-sm pt-3">
+                        <img class="img-fluid" src="./img/Nick Punk.jpg" alt="Portrait of Nicholas Fazzolari">
+                    </div>
                 </div>
             </div>
             <div class="col-sm">
                 <div class="row">
-                    <div class="col-sm">Bio section</div>
+                    <div class="col-sm pt-3">
+                        <h5 class="soleil-extrabold topic-heading-text">Heading Text</h5>
+                        <p class="soleil-regular pt-3">Some sample text for the lookins at.</p>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col-sm">Skills and tools</div>
@@ -54,8 +74,8 @@
     </section>
 
     <!-- Links to developer and design sites container -->
-    <section class="container-fluid">
-        <div class="row">
+    <section class="container-fluid pt-3">
+        <div class="row section-container no-gutters rounded-sm">
             <div class="col-sm">Section heading</div>
             <div class="col-sm">Information</div>
             <div class="col-sm">Links to dev sites</div>
@@ -63,8 +83,8 @@
     </section>
 
     <!-- Contact and style guide container -->
-    <section class="container-fluid">
-        <div class="row">
+    <section class="container-fluid pt-3">
+        <div class="row section-container no-gutters rounded-sm">
             <div class="col-sm">Section heading</div>
             <div class="col-sm">Contact form</div>
             <div class="col-sm">Style guide</div>
