--- a/sandbox.html
+++ b/sandbox.html
@@ -40,18 +40,17 @@
     </div>
     
     <!-- Navigation Component -->
+    <code>Navigation component:</code>
     <div class="container-fluid mt-3">
         <div class="row section-container no-gutters rounded-sm">
             <div class="col-sm m-3">
                 <nav>
-                    <span class="navlink-custom soleil-extrabold"><a href="#">ABOUT</a></span>
+                    <span class="navlink-custom soleil-extrabold"><a class="navlink-custom-padder" href="#">ABOUT</a></span>
                     <span class="navlink-custom soleil-extrabold"><a class="navlink-custom-padder" href="#">WORK</a></span>
                 </nav>
             </div>
         </div>
     </div>
-
-    <h1 class="mercy soleil-extrabold">I LOVE YOU MERCY</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
