Added CSS class swap JS and copywriting

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="col-sm-4">
                 <img class="m-3" src="./img/nickfazz_header_brand.svg" alt="Nicholas Fazzolari brand logo">
             </div>
-            <div class="col-sm d-flex justify-content-center align-items-center">
+            <div id="topNav" class="col-sm d-flex justify-content-end align-items-center">
                 <div class="row section-container no-gutters rounded-sm">
                     <div class="col-sm m-3">
                         <nav>
@@ -51,24 +51,87 @@
                 </div>
             </div>
             <div class="col-sm">
-                <div class="row">
-                    <div class="col-sm pt-3">
-                        <h5 class="soleil-extrabold topic-heading-text">Heading Text</h5>
-                        <p class="soleil-regular pt-3">Some sample text for the lookins at.</p>
+                <div class="row ml-4">
+                    <div class="col-sm-10 pt-3">
+                        <h3 class="soleil-extrabold topic-heading-text">WHAT DO I DO?</h3>
+                        <p class="soleil-regular pt-3">
+                            Front-end web developer, and digital designer who
+                            creates custom web development and digital design solutions and products.
+                            My work is a combination of my formal education in computer science and my
+                            career in the creative industry. Empowering people through science and art is
+                            the root principle of my work. For more writing on my work as a web developer
+                            and designer feel free to visit my Dev.to profile.
+                        </p>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-sm">Skills and tools</div>
+                <div class="row mt-4 ml-4">
+                    <div class="col-sm-10">
+                        <h3 class="soleil-extrabold topic-heading-text">HOW DO I DO IT?</h3>
+                        <p class="soleil-regular pt-3">
+                            I produce my work using a specific set of technologies and skills relevant to
+                            the web development solution in question. These skills are both technical
+                            and social and are listed in detail to give you an overview of some of the core
+                            tools I use to create digital products.
+                        </p>
+                    </div>
                 </div>
-                <div class="row">
-                    <div class="col-sm">Coding skills list</div>
-                    <div class="col-sm">Design skills list</div>
-                    <div class="col-sm">People skills list</div>
+                <div class="row mt-4 ml-4 mb-5">
+                    <div class="col-sm">
+                        <h3 class="soleil-extrabold topic-heading-text">CODE</h3>
+                        <ul class="soleil-regular pt-3">
+                            <li>HTML</li>
+                            <li>CSS (SASS/SCSS)</li>
+                            <li>JavaScript</li>
+                            <li>Bootstrap</li>
+                            <li>PHP</li>
+                            <li>Node & npm</li>
+                            <li>Git</li>
+                        </ul>
+                    </div>
+                    <div class="col-sm">
+                        <h3 class="soleil-extrabold topic-heading-text">DESIGN</h3>
+                        <ul class="soleil-regular pt-3">
+                            <li>Illustrator</li>
+                            <li>Adobe XD</li>
+                            <li>Photoshop</li>
+                            <li>After Effects</li>
+                            <li>Logo Design</li>
+                            <li>Typography</li>
+                            <li>Digital Illustration</li>
+                            <li>Prototyping & Wireframing</li>
+                        </ul>
+                    </div>
+                    <div class="col-sm">
+                        <h3 class="soleil-extrabold topic-heading-text">PEOPLE</h3>
+                        <ul class="soleil-regular pt-3">
+                            <li>Team Building</li>
+                            <li>Agile Development</li>
+                            <li>Client Consultation</li>
+                            <li>Training & Instructional</li>
+                            <li>Enterprise Leadership</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <div class="col-sm">
-                <div class="row">Front end developer resume</div>
-                <div class="row">Graphic design portfolio</div>
+                <div class="row ml-4">
+                    <div class="col-sm pt-3">
+                        <h3 class="soleil-extrabold topic-heading-text">FRONT END DEVELOPER RESUME</h3>
+                        <p class="soleil-regular pt-3">Download a .pdf file of my current front end developer resume.</p>
+                        <div class="download-button">
+                            <a class="soleil-extrabold d-inline-block rempadder-1 rounded-sm mt-3" href="#">DOWNLOAD</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mt-4 ml-4">
+                    <div class="col-sm">
+                        <h3 class="soleil-extrabold topic-heading-text">DIGITAL DESIGN PORTFOLIO</h3>
+                        <p class="soleil-regular pt-3">Download a .pdf file of my current design portfolio.</p>
+                        <div class="download-button">
+                            <a class="soleil-extrabold d-inline-block rempadder-1 rounded-sm mt-3" href="#">DOWNLOAD</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -96,5 +159,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="./js/nickfazz.js"></script>
 </body>
 </html>
