Main page completed.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div class="col-sm">
-                <div class="row ml-4">
+                <div class="row">
                     <div class="col-sm-10 pt-3">
                         <h3 class="soleil-extrabold topic-heading-text">WHAT DO I DO?</h3>
                         <p class="soleil-regular pt-3">
@@ -64,7 +64,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="row mt-4 ml-4">
+                <div class="row mt-4">
                     <div class="col-sm-10">
                         <h3 class="soleil-extrabold topic-heading-text">HOW DO I DO IT?</h3>
                         <p class="soleil-regular pt-3">
@@ -75,7 +75,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="row mt-4 ml-4 mb-5">
+                <div class="row mt-4">
                     <div class="col-sm">
                         <h3 class="soleil-extrabold topic-heading-text">CODE</h3>
                         <ul class="soleil-regular pt-3">
@@ -114,8 +114,8 @@
                 </div>
             </div>
             <div class="col-sm">
-                <div class="row ml-4">
-                    <div class="col-sm pt-3">
+                <div class="row pb-4 h-50">
+                    <div class="col-sm pt-3 flex-fill">
                         <h3 class="soleil-extrabold topic-heading-text">FRONT END DEVELOPER RESUME</h3>
                         <p class="soleil-regular pt-3">Download a .pdf file of my current front end developer resume.</p>
                         <div class="download-button">
@@ -123,7 +123,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row mt-4 ml-4">
+                <div class="row mt-4 h-50">
                     <div class="col-sm">
                         <h3 class="soleil-extrabold topic-heading-text">DIGITAL DESIGN PORTFOLIO</h3>
                         <p class="soleil-regular pt-3">Download a .pdf file of my current design portfolio.</p>
@@ -139,18 +139,69 @@
     <!-- Links to developer and design sites container -->
     <section class="container-fluid pt-3">
         <div class="row section-container no-gutters rounded-sm">
-            <div class="col-sm">Section heading</div>
-            <div class="col-sm">Information</div>
-            <div class="col-sm">Links to dev sites</div>
+            <div class="col-sm-2 p-3">
+                <div class="row">
+                    <div class="col-sm">
+                        <header class="section-heading-container rounded-sm">
+                            <h5 class="soleil-extrabold section-heading-text">EXTERNAL <br> CODE & DESIGN <br> PROFILES</h5>
+                        </header>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm pt-3">
+                <h3 class="soleil-extrabold topic-heading-text">EXPLORE MY WORK AT EXTERNAL SOURCES</h3>
+                <p class="soleil-regular pt-3">
+                    Leveraging externally hosted developer and design showcase sites is an efficient and
+                    collaborative way for me to share small side projects and large projects to a broad
+                    audience and create connections with other front-end developers and web designers.
+                    Feel free to check out the sites linked to the right to explore my work 
+                </p>
+            </div>
+            <div class="col-sm pb-3">
+                <div class="row h-100 align-items-center">
+                    <div class="col-4 text-center">
+                        <a href="#">
+                            <img id="gitHubImg" src="./img/icon_GitHub_Grey.svg" alt="GitHub Logo" width="50%">
+                        </a>
+                    </div>
+                    <div class="col-4 text-center">
+                        <a href="#">
+                            <img id="codePenImg" src="./img/icon_CodePen_Grey.svg" alt="CodePen Logo" width="50%">
+                        </a>
+                    </div>
+                    <div class="col-4 text-center">
+                        <a href="#">
+                            <img id="behanceImg" src="./img/icon_Behance_Grey.svg" alt="Behance Logo" width="50%">
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
     <!-- Contact and style guide container -->
-    <section class="container-fluid pt-3">
+    <section class="container-fluid pt-3 mb-3">
         <div class="row section-container no-gutters rounded-sm">
-            <div class="col-sm">Section heading</div>
-            <div class="col-sm">Contact form</div>
-            <div class="col-sm">Style guide</div>
+            <div class="col-sm-2 p-3">
+                <div class="row">
+                    <div class="col-sm">
+                        <header class="section-heading-container rounded-sm">
+                            <h5 class="soleil-extrabold section-heading-text">CONTACT ME</h5>
+                        </header>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm pt-3 pb-3">
+                <h3 class="soleil-extrabold topic-heading-text">CONTACT ME USING EMAIL</h3>
+                <p class="soleil-regular pt-3">
+                    Feel free to email me regarding business opportunities and employment via email
+                    at: 
+                </p>
+                <span class="soleil-extrabold email-link-custom-style">
+                    <a href="mailto:nickfazzpdx@gmail.com">nickfazzpdx@gmail.com</a>
+                </span>
+            </div>
+            <!-- <div class="col-sm">Style guide</div> -->
         </div>
     </section>
 
