--- a/sandbox.html
+++ b/sandbox.html
@@ -52,6 +52,15 @@
         </div>
     </div>
 
+    <code>Image hover component</code>
+    <div class="container-fluid mt-3">
+        <div class="row section-container no-gutters rounded-sm">
+            <div class="col-sm m-3">
+                
+            </div>
+        </div>
+    </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
