Added work section and preview images.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <div class="row section-container no-gutters rounded-sm">
                     <div class="col-sm m-3">
                         <nav>
-                            <span class="navlink-custom soleil-extrabold"><a class="navlink-custom-padder" href="#">ABOUT</a></span>
-                            <span class="navlink-custom soleil-extrabold"><a class="navlink-custom-padder" href="#">WORK</a></span>
+                            <span class="navlink-custom soleil-extrabold"><a class="navlink-custom-padder" href="index.html">ABOUT</a></span>
+                            <span class="navlink-custom soleil-extrabold"><a class="navlink-custom-padder" href="work.html">WORK</a></span>
                         </nav>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="row mt-4">
+                <div class="row mt-4 justify-content-between">
                     <div class="col-sm">
                         <h3 class="soleil-extrabold topic-heading-text">CODE</h3>
                         <ul class="soleil-regular pt-3">
@@ -113,7 +113,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm">
+            <div class="col-sm-3 mr-3">
                 <div class="row pb-4 h-50">
                     <div class="col-sm pt-3 flex-fill">
                         <h3 class="soleil-extrabold topic-heading-text">FRONT END DEVELOPER RESUME</h3>
