--- a/work.html
+++ b/work.html
@@ -6,29 +6,199 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"> 
+    <link rel="stylesheet" href="https://use.typekit.net/jnu3ljx.css">
+    <link rel="stylesheet" href="./css/styles.css">
 
     <title>Portfolio of Nicholas Fazzolari - Front End Web Developer and Digital Designer</title>
 </head>
 <body>
 
     <!-- Heading & navigation container -->
-    <header>
-
+    <header class="container-fluid pt-3">
+        <div class="row section-container no-gutters rounded-sm">
+            <div class="col-sm-4">
+                <img class="m-3" src="./img/nickfazz_header_brand.svg" alt="Nicholas Fazzolari brand logo">
+            </div>
+            <div id="topNav" class="col-sm d-flex justify-content-end align-items-center">
+                <div class="row section-container no-gutters rounded-sm">
+                    <div class="col-sm m-3">
+                        <nav>
+                            <span class="navlink-custom soleil-extrabold"><a class="navlink-custom-padder" href="index.html">ABOUT</a></span>
+                            <span class="navlink-custom soleil-extrabold"><a class="navlink-custom-padder" href="work.html">WORK</a></span>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
 
     <!-- Work projects overview container -->
-    <section>
-
+    <section class="container-fluid pt-3">
+        <div class="row section-container no-gutters rounded-sm">
+            <div class="col-sm-2 p-3">
+                <div class="row">
+                    <div class="col-sm">
+                        <header class="section-heading-container rounded-sm">
+                            <h5 class="soleil-extrabold section-heading-text">PROJECTS <br> OVERVIEW</h5>
+                        </header>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-5 pt-3 pb-3">
+                <h3 class="soleil-extrabold topic-heading-text">FEATURED FRONT END DEVELOPMENT PROJECTS</h3>
+                <p class="soleil-regular pt-3">
+                    The purpose of this work showcase is to highlight two current web development client projects I have
+                    designed and implemented in the last two years. Each project showcase serves as a an overview which
+                    gives insight into the company or product alongside technical and design details on the implemenation.
+                    Links to source code repositories to each projects are provided so that visitors can look at the codebase alongside
+                    project structure for insight into my development workflow.  
+                </p>
+            </div>
+        </div>
     </section>
 
     <!-- Project 1 container -->
-    <section>
-        
+    <section class="container-fluid pt-3">
+        <div class="row section-container no-gutters rounded-sm">
+            <div class="col-sm-2 p-3">
+                <div class="row">
+                    <div class="col-sm">
+                        <header class="section-heading-container rounded-sm">
+                            <h5 class="soleil-extrabold section-heading-text">STAR BAR PORTLAND <br> WEBSITE</h5>
+                        </header>
+                    </div>
+                </div>
+                <div class="row pt-3">
+                    <div class="col-sm soleil-regular">
+                        <h5 class="soleil-extrabold topic-heading-text">CORE TECHNOLOGIES</h5>
+                        <ul class="pt-3">
+                            <li>HTML</li>
+                            <li>CSS3 & SASS</li>
+                            <li>JavaScript</li>
+                        </ul>
+                        <h5 class="soleil-extrabold topic-heading-text">DESIGN TOOLS</h5>
+                        <ul class="pt-3">
+                            <li>Adobe Illustrator</li>
+                            <li>Adobe Photoshop/li>
+                            <li>Paper Prototype</li>
+                        </ul>
+                        <h5 class="soleil-extrabold topic-heading-text">FRAMEWORKS AND BACKEND</h5>
+                        <ul class="pt-3">
+                            <li>Bootstrap 4</li>
+                            <li>GitHub</li>
+                            <li>Shared Hosting</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm pt-3 pb-3">
+                <h3 class="soleil-extrabold topic-heading-text">STAR BAR PORTLAND CLIENT AND TECHNICAL OVERVIEW</h3>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <p class="soleil-regular pt-3">
+                            Star Bar Portland is a rock'n'roll night life hotspot in inner Southeast Portland. Run with DIY ethics
+                            in mind I partnered with the owner to develop a simple, fast, and to-the-point website which serves the
+                            purpose of getting people to the bar for fun, and showcases the visual feel of the bar using an Instagram feed.
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6 p-3">
+                        <img src="./img/sb_pr_full_03.png" alt="" class="img-fluid rounded-sm">
+                        <img src="./img/sb_pr_full_02.png" alt="" class="img-fluid rounded-sm pt-3">
+                        <img src="./img/sb_pr_full_01.png" alt="" class="img-fluid rounded-sm pt-3">
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="row">
+                            <div class="col-sm p-3 mr-3">
+                                <img class="img-fluid rounded-sm" src="./img/sb_pr_logo_01.png" alt="Star Bar Website Screenshot Logo">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm">
+                                <img src="./img/sb_pr_mobile_01.png" alt="Star Bar Website Mobile Preview 1" class="img-fluid rounded-sm">
+                            </div>
+                            <div class="col-sm">
+                                <img src="./img/sb_pr_mobile_02.png" alt="Star Bar Website Mobile Preview 2" class="img-fluid rounded-sm">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- project 1 container -->
-    <section>
-
+    <section class="container-fluid pt-3">
+        <div class="row section-container no-gutters rounded-sm">
+            <div class="col-sm-2 p-3">
+                <div class="row">
+                    <div class="col-sm">
+                        <header class="section-heading-container rounded-sm">
+                            <h5 class="soleil-extrabold section-heading-text">BLACK WATER BAR <br> WEBSITE</h5>
+                        </header>
+                    </div>
+                </div>
+                <div class="row pt-3">
+                    <div class="col-sm soleil-regular">
+                        <h5 class="soleil-extrabold topic-heading-text">CORE TECHNOLOGIES</h5>
+                        <ul class="pt-3">
+                            <li>HTML</li>
+                            <li>CSS3 & SASS</li>
+                            <li>JavaScript</li>
+                        </ul>
+                        <h5 class="soleil-extrabold topic-heading-text">DESIGN TOOLS</h5>
+                        <ul class="pt-3">
+                            <li>Adobe Illustrator</li>
+                            <li>Adobe Photoshop/li>
+                            <li>Paper Prototype</li>
+                        </ul>
+                        <h5 class="soleil-extrabold topic-heading-text">FRAMEWORKS AND BACKEND</h5>
+                        <ul class="pt-3">
+                            <li>Bootstrap 4</li>
+                            <li>GitHub</li>
+                            <li>Shared Hosting</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm pt-3 pb-3">
+                <h3 class="soleil-extrabold topic-heading-text">BLACK WATER BAR PORTLAND CLIENT AND TECHNICAL OVERVIEW</h3>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <p class="soleil-regular pt-3">
+                            Star Bar Portland is a rock'n'roll night life hotspot in inner Southeast Portland. Run with DIY ethics
+                            in mind I partnered with the owner to develop a simple, fast, and to-the-point website which serves the
+                            purpose of getting people to the bar for fun, and showcases the visual feel of the bar using an Instagram feed.
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6 p-3">
+                        <img src="./img/bw_pr_full_01.png" alt="" class="img-fluid rounded-sm">
+                        <img src="./img/bw_pr_full_02.png" alt="" class="img-fluid rounded-sm pt-3">
+                        <img src="./img/bw_pr_full_03.png" alt="" class="img-fluid rounded-sm pt-3">
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="row">
+                            <div class="col-sm p-3 mr-3">
+                                <img src="./img/bw_pr_logo_01.png" alt="" class="img-fluid rounded-sm">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm">
+                                <img src="./img/bw_pr_mobile_01.png" alt="" class="img-fluid rounded-sm">
+                            </div>
+                            <div class="col-sm">
+                                <img src="./img/bw_pr_mobile_02.png" alt="" class="img-fluid rounded-sm">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Optional JavaScript -->
