Added projects to work section. Adjusted spacing on main page.

--- a/index.html
+++ b/index.html
@@ -186,16 +186,16 @@
                 <div class="row">
                     <div class="col-sm">
                         <header class="section-heading-container rounded-sm">
-                            <h5 class="soleil-extrabold section-heading-text">CONTACT ME</h5>
+                            <h5 class="soleil-extrabold section-heading-text">CONTACT</h5>
                         </header>
                     </div>
                 </div>
             </div>
             <div class="col-sm pt-3 pb-3">
-                <h3 class="soleil-extrabold topic-heading-text">CONTACT ME USING EMAIL</h3>
+                <h3 class="soleil-extrabold topic-heading-text">EMAIL CONTACT</h3>
                 <p class="soleil-regular pt-3">
                     Feel free to email me regarding business opportunities and employment via email
-                    at: 
+                    at:
                 </p>
                 <span class="soleil-extrabold email-link-custom-style">
                     <a href="mailto:nickfazzpdx@gmail.com">nickfazzpdx@gmail.com</a>
