--- a/work.html
+++ b/work.html
@@ -169,9 +169,11 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <p class="soleil-regular pt-3">
-                            Star Bar Portland is a rock'n'roll night life hotspot in inner Southeast Portland. Run with DIY ethics
-                            in mind I partnered with the owner to develop a simple, fast, and to-the-point website which serves the
-                            purpose of getting people to the bar for fun, and showcases the visual feel of the bar using an Instagram feed.
+                            Black Water PDX is a vegan restaurant, bar, and music venue located in
+                            NE Portland. When beginning the development of the website the owners
+                            and I decided to build the website around the physical brand of the venue
+                            to establish a consistent feel. The website is designed mobile-first to
+                            deliver a fast, lightweight browsing experience on mobile devices.
                         </p>
                     </div>
                 </div>
